# django-environ-ppb

./: .dockerignore  .gitignore  Makefile  README.md  setup.cfg  tox.ini
.github/workflows/: test.yml
ppbenviron/: __init__.py
testapp/: requirements.txt
testapp/testapp/: settings.py
testapp/testapp/management/commands/: print_settings.py
testapp/tests/: test_file.py  test_vault.py
