[metadata]
name = django-environ-ppb
version = 1.0.0
description = easy 12factor for django settings
author = PPB - InfoSec Engineering
author_email = surface@paddypowerbetfair.com
url = https://github.com/surface-security/django-environ-ppb
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Environment :: Web Environment
    Topic :: Software Development

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django-environ == 0.6.0

python_requires = >=3.7

[options.extras_require]
vault = hvac == 0.10.5

[options.packages.find]
exclude =
    tests
    tests.*

[coverage:run]
source = ppbenviron

[coverage:report]
show_missing = True
skip_covered = True
